<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/topic1"
        android:layout_width="171dp"
        android:layout_height="45dp"
        android:layout_marginTop="84dp"
        android:text="@string/reg"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_tv"
        android:layout_width="135dp"
        android:layout_height="40dp"
        android:layout_marginTop="152dp"
        android:text="@string/name"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/etname"
        app:layout_constraintHorizontal_bias="0.581"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/email_tv"
        android:layout_width="135dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/email"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/etemail"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_tv" />

    <TextView
        android:id="@+id/phn_no_tv"
        android:layout_width="135dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:text="@string/pno"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/etphone"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_tv" />

    <TextView
        android:id="@+id/user_tv"
        android:layout_width="135dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:text="@string/user"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/etuser"
        app:layout_constraintHorizontal_bias="0.677"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phn_no_tv" />

    <TextView
        android:id="@+id/pwd_tv"
        android:layout_width="135dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:text="@string/pwd1"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_tv" />

    <TextView
        android:id="@+id/c_pwd_tv"
        android:layout_width="151dp"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:text="@string/pwd2"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/etcpwd"
        app:layout_constraintHorizontal_bias="0.235"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pwd_tv" />

    <EditText
        android:id="@+id/etname"
        android:layout_width="198dp"
        android:layout_height="35dp"
        android:layout_marginEnd="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/name_tv"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etemail"
        android:layout_width="201dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintBaseline_toBaselineOf="@+id/email_tv"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etphone"
        android:layout_width="199dp"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintBaseline_toBaselineOf="@+id/phn_no_tv"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etuser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/user_tv"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etpwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBaseline_toBaselineOf="@+id/pwd_tv"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/create_btn"
        android:layout_width="216dp"
        android:layout_height="46dp"
        android:text="@string/create"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.843" />

    <EditText
        android:id="@+id/etcpwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBaseline_toBaselineOf="@+id/c_pwd_tv"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>